--- a/src/tex/preamble.tex
+++ b/src/tex/preamble.tex
@@ -5,7 +5,7 @@
 \renewcommand{\sectionautorefname}{\S\!}%
 \renewcommand{\subsectionautorefname}{\S\!\!}%
 \renewcommand{\subsubsectionautorefname}{\S\!}%
-\renewcommand{\equationautorefname}{eq.}
+\renewcommand{\equationautorefname}{Eq.}
 \renewcommand{\figureautorefname}{Fig.}
 \newcommand{\appref}[1]{\hyperref[#1]{Appendix~\autoref*{#1}}}
 
@@ -69,3 +69,4 @@
 \newcommand{\Yd}{\mathcal{Y}}
 
 \newcommand{\package}[1]{\textsc{#1}}
+\newcommand{\LCDM}{$\Lambda$CDM}
