--- a/src/tex/starkman_etal_2023_diffusion_distortion.bib
+++ b/src/tex/starkman_etal_2023_diffusion_distortion.bib
@@ -155,6 +155,26 @@
 }
 
 
+@article{CaldwellStebbins2008,
+  author        = {{Caldwell}, R.~R. and {Stebbins}, A.},
+  title         = {{A Test of the Copernican Principle}},
+  journal       = {\prl},
+  keywords      = {98.80.Es, 98.70.Vc, Observational cosmology, Background radiations, Astrophysics},
+  year          = 2008,
+  month         = may,
+  volume        = {100},
+  number        = {19},
+  eid           = {191302},
+  pages         = {191302},
+  doi           = {10.1103/PhysRevLett.100.191302},
+  archiveprefix = {arXiv},
+  eprint        = {0711.3459},
+  primaryclass  = {astro-ph},
+  adsurl        = {https://ui.adsabs.harvard.edu/abs/2008PhRvL.100s1302C},
+  adsnote       = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @article{Chluba+2012,
   author        = {{Chluba}, J. and {Khatri}, R. and {Sunyaev}, R.~A.},
   title         = {{CMB at 2 {\texttimes} 2 order: the dissipation of primordial acoustic waves and the observable part of the associated energy release}},
@@ -170,6 +190,25 @@
   eprint        = {1202.0057},
   primaryclass  = {astro-ph.CO},
   adsurl        = {https://ui.adsabs.harvard.edu/abs/2012MNRAS.425.1129C},
+  adsnote       = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@article{Chluba+2017,
+  author        = {{Chluba}, Jens and {Hill}, James Colin and {Abitbol}, Maximilian H.},
+  title         = {{Rethinking CMB foregrounds: systematic extension of foreground parametrizations}},
+  journal       = {\mnras},
+  keywords      = {cosmic background radiation, cosmological parameters, early Universe, cosmology: theory, Astrophysics - Cosmology and Nongalactic Astrophysics},
+  year          = 2017,
+  month         = nov,
+  volume        = {472},
+  number        = {1},
+  pages         = {1195-1213},
+  doi           = {10.1093/mnras/stx1982},
+  archiveprefix = {arXiv},
+  eprint        = {1701.00274},
+  primaryclass  = {astro-ph.CO},
+  adsurl        = {https://ui.adsabs.harvard.edu/abs/2017MNRAS.472.1195C},
   adsnote       = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -228,7 +267,6 @@
   adsnote       = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-
 @article{CLASS1,
   author        = {{Lesgourgues}, Julien},
   title         = {{The Cosmic Linear Anisotropy Solving System (CLASS) I: Overview}},
@@ -265,6 +303,7 @@
   adsurl        = {https://ui.adsabs.harvard.edu/abs/2011JCAP...07..034B},
   adsnote       = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
 
 @article{CMBS42019,
   author        = {{Abazajian}, Kevork and {Addison}, Graeme and {Adshead}, Peter and {Ahmed}, Zeeshan and {Allen}, Steven W. and {Alonso}, David and {Alvarez}, Marcelo and {Anderson}, Adam and {Arnold}, Kam S. and {Baccigalupi}, Carlo and {Bailey}, Kathy and {Barkats}, Denis and {Barron}, Darcy and {Barry}, Peter S. and {Bartlett}, James G. and {Basu Thakur}, Ritoban and {Battaglia}, Nicholas and {Baxter}, Eric and {Bean}, Rachel and {Bebek}, Chris and {Bender}, Amy N. and {Benson}, Bradford A. and {Berger}, Edo and {Bhimani}, Sanah and {Bischoff}, Colin A. and {Bleem}, Lindsey and {Bocquet}, Sebastian and {Boddy}, Kimberly and {Bonato}, Matteo and {Bond}, J. Richard and {Borrill}, Julian and {Bouchet}, Fran{\c{c}}ois R. and {Brown}, Michael L. and {Bryan}, Sean and {Burkhart}, Blakesley and {Buza}, Victor and {Byrum}, Karen and {Calabrese}, Erminia and {Calafut}, Victoria and {Caldwell}, Robert and {Carlstrom}, John E. and {Carron}, Julien and {Cecil}, Thomas and {Challinor}, Anthony and {Chang}, Clarence L. and {Chinone}, Yuji and {Cho}, Hsiao-Mei Sherry and {Cooray}, Asantha and {Crawford}, Thomas M. and {Crites}, Abigail and {Cukierman}, Ari and {Cyr-Racine}, Francis-Yan and {de Haan}, Tijmen and {de Zotti}, Gianfranco and {Delabrouille}, Jacques and {Demarteau}, Marcel and {Devlin}, Mark and {Di Valentino}, Eleonora and {Dobbs}, Matt and {Duff}, Shannon and {Duivenvoorden}, Adriaan and {Dvorkin}, Cora and {Edwards}, William and {Eimer}, Joseph and {Errard}, Josquin and {Essinger-Hileman}, Thomas and {Fabbian}, Giulio and {Feng}, Chang and {Ferraro}, Simone and {Filippini}, Jeffrey P. and {Flauger}, Raphael and {Flaugher}, Brenna and {Fraisse}, Aurelien A. and {Frolov}, Andrei and {Galitzki}, Nicholas and {Galli}, Silvia and {Ganga}, Ken and {Gerbino}, Martina and {Gilchriese}, Murdock and {Gluscevic}, Vera and {Green}, Daniel and {Grin}, Daniel and {Grohs}, Evan and {Gualtieri}, Riccardo and {Guarino}, Victor and {Gudmundsson}, Jon E. and {Habib}, Salman and {Haller}, Gunther and {Halpern}, Mark and {Halverson}, Nils W. and {Hanany}, Shaul and {Harrington}, Kathleen and {Hasegawa}, Masaya and {Hasselfield}, Matthew and {Hazumi}, Masashi and {Heitmann}, Katrin and {Henderson}, Shawn and {Henning}, Jason W. and {Hill}, J. Colin and {Hlozek}, Ren{\'e}e and {Holder}, Gil and {Holzapfel}, William and {Hubmayr}, Johannes and {Huffenberger}, Kevin M. and {Huffer}, Michael and {Hui}, Howard and {Irwin}, Kent and {Johnson}, Bradley R. and {Johnstone}, Doug and {Jones}, William C. and {Karkare}, Kirit and {Katayama}, Nobuhiko and {Kerby}, James and {Kernovsky}, Sarah and {Keskitalo}, Reijo and {Kisner}, Theodore and {Knox}, Lloyd and {Kosowsky}, Arthur and {Kovac}, John and {Kovetz}, Ely D. and {Kuhlmann}, Steve and {Kuo}, Chao-lin and {Kurita}, Nadine and {Kusaka}, Akito and {Lahteenmaki}, Anne and {Lawrence}, Charles R. and {Lee}, Adrian T. and {Lewis}, Antony and {Li}, Dale and {Linder}, Eric and {Loverde}, Marilena and {Lowitz}, Amy and {Madhavacheril}, Mathew S. and {Mantz}, Adam and {Matsuda}, Frederick and {Mauskopf}, Philip and {McMahon}, Jeff and {McQuinn}, Matthew and {Meerburg}, P. Daniel and {Melin}, Jean-Baptiste and {Meyers}, Joel and {Millea}, Marius and {Mohr}, Joseph and {Moncelsi}, Lorenzo and {Mroczkowski}, Tony and {Mukherjee}, Suvodip and {M{\"u}nchmeyer}, Moritz and {Nagai}, Daisuke and {Nagy}, Johanna and {Namikawa}, Toshiya and {Nati}, Federico and {Natoli}, Tyler and {Negrello}, Mattia and {Newburgh}, Laura and {Niemack}, Michael D. and {Nishino}, Haruki and {Nordby}, Martin and {Novosad}, Valentine and {O'Connor}, Paul and {Obied}, Georges and {Padin}, Stephen and {Pandey}, Shivam and {Partridge}, Bruce and {Pierpaoli}, Elena and {Pogosian}, Levon and {Pryke}, Clement and {Puglisi}, Giuseppe and {Racine}, Benjamin and {Raghunathan}, Srinivasan and {Rahlin}, Alexandra and {Rajagopalan}, Srini and {Raveri}, Marco and {Reichanadter}, Mark and {Reichardt}, Christian L. and {Remazeilles}, Mathieu and {Rocha}, Graca and {Roe}, Natalie A. and {Roy}, Anirban and {Ruhl}, John and {Salatino}, Maria and {Saliwanchik}, Benjamin and {Schaan}, Emmanuel and {Schillaci}, Alessandro and {Schmittfull}, Marcel M. and {Scott}, Douglas and {Sehgal}, Neelima and {Shandera}, Sarah and {Sheehy}, Christopher and {Sherwin}, Blake D. and {Shirokoff}, Erik and {Simon}, Sara M. and {Slosar}, Anze and {Somerville}, Rachel and {Spergel}, David and {Staggs}, Suzanne T. and {Stark}, Antony and {Stompor}, Radek and {Story}, Kyle T. and {Stoughton}, Chris and {Suzuki}, Aritoki and {Tajima}, Osamu and {Teply}, Grant P. and {Thompson}, Keith and {Timbie}, Peter and {Tomasi}, Maurizio and {Treu}, Jesse I. and {Tristram}, Matthieu and {Tucker}, Gregory and {Umilt{\`a}}, Caterina and {van Engelen}, Alexander and {Vieira}, Joaquin D. and {Vieregg}, Abigail G. and {Vogelsberger}, Mark and {Wang}, Gensheng and {Watson}, Scott and {White}, Martin and {Whitehorn}, Nathan and {Wollack}, Edward J. and {Kimmy Wu}, W.~L. and {Xu}, Zhilei and {Yasini}, Siavash and {Yeck}, James and {Yoon}, Ki Won and {Young}, Edward and {Zonca}, Andrea},
@@ -506,6 +545,7 @@
 }
 
 
+
 @article{KleinNishina1929,
   author  = {{Klein}, O. and {Nishina}, T.},
   title   = {{{\"U}ber die Streuung von Strahlung durch freie Elektronen nach der neuen relativistischen Quantendynamik von Dirac}},
@@ -532,7 +572,6 @@
   adsurl    = {https://ui.adsabs.harvard.edu/abs/1994okml.book..113K},
   adsnote   = {Provided by the SAO/NASA Astrophysics Data System}
 }
-
 
 
 @article{Kogut+2011,
@@ -587,6 +626,21 @@
 }
 
 
+
+@article{Pitrou:2009bc,
+  author        = {Pitrou, Cyril and Bernardeau, Francis and Uzan, Jean-Philippe},
+  title         = {{The y-sky: diffuse spectral distortions of the cosmic microwave background}},
+  eprint        = {0912.3655},
+  archiveprefix = {arXiv},
+  primaryclass  = {astro-ph.CO},
+  doi           = {10.1088/1475-7516/2010/07/019},
+  journal       = {JCAP},
+  volume        = {07},
+  pages         = {019},
+  year          = {2010}
+}
+
+
 @article{Planck2018parameters,
   author        = {{Planck Collaboration} and {Aghanim}, N. and {Akrami}, Y. and {Ashdown}, M. and {Aumont}, J. and {Baccigalupi}, C. and {Ballardini}, M. and {Banday}, A.~J. and {Barreiro}, R.~B. and {Bartolo}, N. and {Basak}, S. and {Battye}, R. and {Benabed}, K. and {Bernard}, J. -P. and {Bersanelli}, M. and {Bielewicz}, P. and {Bock}, J.~J. and {Bond}, J.~R. and {Borrill}, J. and {Bouchet}, F.~R. and {Boulanger}, F. and {Bucher}, M. and {Burigana}, C. and {Butler}, R.~C. and {Calabrese}, E. and {Cardoso}, J. -F. and {Carron}, J. and {Challinor}, A. and {Chiang}, H.~C. and {Chluba}, J. and {Colombo}, L.~P.~L. and {Combet}, C. and {Contreras}, D. and {Crill}, B.~P. and {Cuttaia}, F. and {de Bernardis}, P. and {de Zotti}, G. and {Delabrouille}, J. and {Delouis}, J. -M. and {Di Valentino}, E. and {Diego}, J.~M. and {Dor{\'e}}, O. and {Douspis}, M. and {Ducout}, A. and {Dupac}, X. and {Dusini}, S. and {Efstathiou}, G. and {Elsner}, F. and {En{\ss}lin}, T.~A. and {Eriksen}, H.~K. and {Fantaye}, Y. and {Farhang}, M. and {Fergusson}, J. and {Fernandez-Cobos}, R. and {Finelli}, F. and {Forastieri}, F. and {Frailis}, M. and {Fraisse}, A.~A. and {Franceschi}, E. and {Frolov}, A. and {Galeotta}, S. and {Galli}, S. and {Ganga}, K. and {G{\'e}nova-Santos}, R.~T. and {Gerbino}, M. and {Ghosh}, T. and {Gonz{\'a}lez-Nuevo}, J. and {G{\'o}rski}, K.~M. and {Gratton}, S. and {Gruppuso}, A. and {Gudmundsson}, J.~E. and {Hamann}, J. and {Handley}, W. and {Hansen}, F.~K. and {Herranz}, D. and {Hildebrandt}, S.~R. and {Hivon}, E. and {Huang}, Z. and {Jaffe}, A.~H. and {Jones}, W.~C. and {Karakci}, A. and {Keih{\"a}nen}, E. and {Keskitalo}, R. and {Kiiveri}, K. and {Kim}, J. and {Kisner}, T.~S. and {Knox}, L. and {Krachmalnicoff}, N. and {Kunz}, M. and {Kurki-Suonio}, H. and {Lagache}, G. and {Lamarre}, J. -M. and {Lasenby}, A. and {Lattanzi}, M. and {Lawrence}, C.~R. and {Le Jeune}, M. and {Lemos}, P. and {Lesgourgues}, J. and {Levrier}, F. and {Lewis}, A. and {Liguori}, M. and {Lilje}, P.~B. and {Lilley}, M. and {Lindholm}, V. and {L{\'o}pez-Caniego}, M. and {Lubin}, P.~M. and {Ma}, Y. -Z. and {Mac{\'\i}as-P{\'e}rez}, J.~F. and {Maggio}, G. and {Maino}, D. and {Mandolesi}, N. and {Mangilli}, A. and {Marcos-Caballero}, A. and {Maris}, M. and {Martin}, P.~G. and {Martinelli}, M. and {Mart{\'\i}nez-Gonz{\'a}lez}, E. and {Matarrese}, S. and {Mauri}, N. and {McEwen}, J.~D. and {Meinhold}, P.~R. and {Melchiorri}, A. and {Mennella}, A. and {Migliaccio}, M. and {Millea}, M. and {Mitra}, S. and {Miville-Desch{\^e}nes}, M. -A. and {Molinari}, D. and {Montier}, L. and {Morgante}, G. and {Moss}, A. and {Natoli}, P. and {N{\o}rgaard-Nielsen}, H.~U. and {Pagano}, L. and {Paoletti}, D. and {Partridge}, B. and {Patanchon}, G. and {Peiris}, H.~V. and {Perrotta}, F. and {Pettorino}, V. and {Piacentini}, F. and {Polastri}, L. and {Polenta}, G. and {Puget}, J. -L. and {Rachen}, J.~P. and {Reinecke}, M. and {Remazeilles}, M. and {Renzi}, A. and {Rocha}, G. and {Rosset}, C. and {Roudier}, G. and {Rubi{\~n}o-Mart{\'\i}n}, J.~A. and {Ruiz-Granados}, B. and {Salvati}, L. and {Sandri}, M. and {Savelainen}, M. and {Scott}, D. and {Shellard}, E.~P.~S. and {Sirignano}, C. and {Sirri}, G. and {Spencer}, L.~D. and {Sunyaev}, R. and {Suur-Uski}, A. -S. and {Tauber}, J.~A. and {Tavagnacco}, D. and {Tenti}, M. and {Toffolatti}, L. and {Tomasi}, M. and {Trombetti}, T. and {Valenziano}, L. and {Valiviita}, J. and {Van Tent}, B. and {Vibert}, L. and {Vielva}, P. and {Villa}, F. and {Vittorio}, N. and {Wandelt}, B.~D. and {Wehus}, I.~K. and {White}, M. and {White}, S.~D.~M. and {Zacchei}, A. and {Zonca}, A.},
   title         = {{Planck 2018 results. VI. Cosmological parameters}},
@@ -624,6 +678,24 @@
   adsnote       = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+
+@article{RottiChluba2021,
+  author        = {{Rotti}, Aditya and {Chluba}, Jens},
+  title         = {{Combining ILC and moment expansion techniques for extracting average-sky signals and CMB anisotropies}},
+  journal       = {\mnras},
+  keywords      = {cosmic background radiation, early Universe, inflation, cosmology: observations, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies},
+  year          = 2021,
+  month         = jan,
+  volume        = {500},
+  number        = {1},
+  pages         = {976-985},
+  doi           = {10.1093/mnras/staa3292},
+  archiveprefix = {arXiv},
+  eprint        = {2006.02458},
+  primaryclass  = {astro-ph.CO},
+  adsurl        = {https://ui.adsabs.harvard.edu/abs/2021MNRAS.500..976R},
+  adsnote       = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 
 @article{Schwarz+2015,
@@ -679,6 +751,24 @@
 }
 
 
+@article{Stebbins:2007ve,
+  author        = {{Stebbins}, Albert},
+  title         = {{CMB Spectral Distortions from the Scattering of Temperature Anisotropies}},
+  journal       = {arXiv e-prints},
+  keywords      = {Astrophysics},
+  year          = 2007,
+  month         = mar,
+  eid           = {astro-ph/0703541},
+  pages         = {astro-ph/0703541},
+  doi           = {10.48550/arXiv.astro-ph/0703541},
+  archiveprefix = {arXiv},
+  eprint        = {astro-ph/0703541},
+  primaryclass  = {astro-ph},
+  adsurl        = {https://ui.adsabs.harvard.edu/abs/2007astro.ph..3541S},
+  adsnote       = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @article{SunyaevKhatri2013,
   author        = {{Sunyaev}, Rashid A. and {Khatri}, Rishi},
   title         = {{Unavoidable CMB Spectral Features and Blackbody Photosphere of Our Universe}},
@@ -697,8 +787,6 @@
   adsurl        = {https://ui.adsabs.harvard.edu/abs/2013IJMPD..2230014S},
   adsnote       = {Provided by the SAO/NASA Astrophysics Data System}
 }
-
-
 @article{YadavWandelt2005,
   author        = {{Yadav}, Amit P. and {Wandelt}, Benjamin D.},
   title         = {{CMB tomography: Reconstruction of adiabatic primordial scalar potential using temperature and polarization maps}},
@@ -730,3 +818,4 @@
   adsurl  = {https://ui.adsabs.harvard.edu/abs/1972JETP...35..643Z},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
