--- a/src/tex/starkman_etal_2023_diffusion_distortion.tex
+++ b/src/tex/starkman_etal_2023_diffusion_distortion.tex
@@ -6,13 +6,32 @@
 \usepackage{showyourwork}
 
 \usepackage{hyperref}
-\usepackage{amsmath}
+\usepackage{amsmath, amssymb}
 \usepackage{newtxmath}
 \usepackage{enumitem}
 \usepackage{graphicx}
 \usepackage{flushend}
 \usepackage{cuted}
 \usepackage{widetext}
+
+% tikz
+\usepackage{tikz}
+\usepackage{mathdots}
+\usepackage{cancel}
+\usepackage{color}
+\usepackage{siunitx}
+\usepackage{array}
+\usepackage{multirow}
+\usepackage{gensymb}
+\usepackage{tabularx}
+\usepackage{extarrows}
+\usepackage{booktabs}
+\usetikzlibrary{fadings}
+\usetikzlibrary{patterns}
+\usetikzlibrary{shadows.blur}
+\usetikzlibrary{shapes}
+
+\tikzset{every picture/.style={line width=0.75pt}} %set default line width to 0.75pt
 
 \input{preamble.tex}
 
@@ -90,16 +109,19 @@ $^{4}$Department of Physics and Astronomy, University of Pittsburgh, Pittsburgh,
     smaller than the electron rest mass, the fractional energy change of a
     scattered photon is small (of order $E_\gamma / m_e c^2$ by the
     Klein-Nishina formula \citep[as translated in
-    \cite{KleinNishina1994}]{KleinNishina1929}.  Therefore, to a good
-    approximation, photon last-scattering does not change the photon's energy
-    but only its propagation direction.
+    \cite{KleinNishina1994}]{KleinNishina1929} and of order $v_e^2/c^2$ for
+    effects due to the electron's velocity).  Therefore, while electron
+    thermalization with the CMB continues through recombination, as does photon
+    isotropization, to a good approximation photon last-scattering does not
+    change the photon's energy but only its propagation direction.
 
     If the photons of the CMB came to us along each LOS unscattered from a
     ``surface of last thermal emission,'' then they would be drawn from the
     thermal-equilibrium blackbody distribution in their local neighborhood of
-    emission.  Instead, the CMB photons are scattered with nearly no change in
-    energy into the LOS at their point of last scattering.  The photon energies
-    are therefore drawn, approximately, from the black-body distributions of the
+    emission. However, there is no ``surface of last thermal emission.''  
+    Instead, the CMB photons are scattered with nearly no change in energy into
+    the LOS at their point of last scattering.  The photon energies are
+    therefore drawn, approximately, from the black-body distributions of the
     neighborhoods from which the photons originated.  The energy distribution of
     the photons arriving along each LOS is approximately the average of many
     blackbodies, each with the temperature of a different neighborhood of photon
@@ -126,30 +148,43 @@ $^{4}$Department of Physics and Astronomy, University of Pittsburgh, Pittsburgh,
     \citep{Khatri+2012}, but again without specific predictions.  A calculation
     of the mean expected distortion may be among the effects included in
     \citep{Chluba+2012}.  Similarly, it is described in
-    \citep{SunyaevKhatri2013,Chluba2016}.
+    \citep{SunyaevKhatri2013,Chluba2016}.  \citet{Stebbins:2007ve} (unpublished)
+    states that scattering of temperature anisotropies inevitably leads to
+    spectral distortions of the CMB, but argues that pre-recombination
+    distortions will be overwhelmed by foreground Sunyaev-Zeldovic (SZ)
+    distortions.  The authors of \cite{Pitrou:2009bc} similarly calculate the
+    angular spectrum of $y$ distortions, and find that it is dominated by
+    reionization-era effects.  Stebbins does suggest \citep{Stebbins:2007ve}
+    checking whether in \LCDM{} cosmologies one can remove the thermal SZ
+    contamination by correlating anisotropies in the spectral distortion with
+    anisotropies in temperature. We do so in this paper.
 
-    We calculate this effect, showing that the $y$-distortion angular
+    We calculate this effect in \LCDM, showing that the $y$-distortion angular
     correlation function is at a level that is potentially measurable in future
     experiments, but confirm that it is small compared to other expected signals
-    \citep{ChlubaSunyaev2004}.  We also calculate the angular cross-correlation
-    function of this y-distortion and the square of the temperature
-    fluctuations.  The cross-correlation is likely detectable in current
-    experiments, including the Atacama Cosmology Telescope (ACT)
-    \citep{Coulton+2023} and the South Pole Telescope (SPT) \citep{SPTymap}, and
-    especially in anticipated experiments like the Simons Observatory
-    \citep{Galitzki+2018} and CMB-S4 \citep{Abitbol+2017}.  The authors of
-    \citep{Chluba+2022} and \citep{Kite+2022} address related questions,
-    including cross-correlations, although not specifically this effect.
+    \citep{ChlubaSunyaev2004}.  However, we also calculate the angular
+    cross-correlation function of this y-distortion and the square of the
+    primordial temperature fluctuations.  The cross-correlation is likely
+    detectable in current experiments, including the Atacama Cosmology Telescope
+    (ACT) \citep{Coulton+2023} and the South Pole Telescope (SPT)
+    \citep{SPTymap}, and especially in anticipated experiments like the Simons
+    Observatory \citep{Galitzki+2018} and CMB-S4 \citep{Abitbol+2017}.  The
+    authors of \citet{Chluba+2022} and \citet{Kite+2022} address related
+    questions, including cross-correlations, although not specifically this
+    effect.
 
     The mixing of blackbody photon distributions is distinct from the averaging
     of temperatures over different lines of sight, whether through the finite
     width of telescope beams \cite[e.g.][]{ChlubaSunyaev2004} or through the
     angular integration inherent in the calculation of the coefficients of
-    spherical harmonics \cite[e.g.][]{Lucca+2020}.  Each of these effects also
-    creates small $y$-distortions in measured signals through temperature
-    averaging, but the effect discussed here is due to physical processes during
-    the epoch of last scattering and thus carries information about the universe
-    rather than about a given measurement.
+    spherical harmonics \cite[e.g.][]{Chluba+2017,Lucca+2020}.  Each of these
+    effects also creates small $y$-distortions in measured signals through
+    temperature averaging, but the effect discussed here is due to physical
+    processes during the epoch of last scattering and thus carries information
+    about the universe rather than about a given measurement.  A different
+    application of spectral distortions due to blackbody mixinga through
+    scattering  was considered in \cite{CaldwellStebbins2008} as a way to
+    constrain inhomogeneities at reionization.
 
     In \autoref{sec:scattering-distribution}, we calculate the distribution of
     second-last-scattering locations.  In \autoref{sec:calculating_the_signal},
@@ -161,11 +196,37 @@ $^{4}$Department of Physics and Astronomy, University of Pittsburgh, Pittsburgh,
     signal in \autoref{sec:detectability}, and conclude in
     \autoref{sec:conclusion}.
 
+    \begin{figure*}
+        \include{graphic.tex}
+        \caption{%
+            The coordinate system. The observer is at a location $z_0 > 0$,
+            looking along a line of sight $\hat{n}$. From the observer's
+            position are defined the cylindrical coordinates ($s_{\perp}, \phi,
+            s_{||}$). A photon's $\phi$ is its azimuthal angle of last
+            scattering into the line of sight. The last scatter occurs at $z_1$
+            at a comoving distance $r_{01}$ from $z_0$. From the
+            2nd-last-scatter at $z_2$, the photon enters the last scattering
+            location with inclination angle $\theta$.
+        %
+        }
+        \label{fig:coordinate_system}
+    \end{figure*}
+
 % section introduction (end)
 
 
 \section{Second-to-Last Scattering Distribution}
 \label{sec:scattering-distribution}
+
+    Photons arriving at a common point of last scattering $\mbf{x_1}$ come from
+    a surrounding neighborhood of prior locations $\mbf{x_2}$, where we use the
+    subscript to label the scattering number, counting back in time from
+    observation at scattering ``0''.  Arriving at $\mbf{x_1}$, the photons
+    scatter into the LOS and their combined distribution is no longer that of a
+    perfect blackbody; it is an average of blackbodies.  The resulting
+    distortion of the blackbody spectrum retains information about the
+    distribution of temperatures in the second-last-scattering neighborhood that
+    goes beyond the intensity of the photon emissions from that LOS.
 
     \begin{figure}
         \script{p2ls/plot_p2ls.py}
@@ -187,16 +248,6 @@ $^{4}$Department of Physics and Astronomy, University of Pittsburgh, Pittsburgh,
         \label{fig:P2LS}
     \end{figure}
 
-    Photons arriving at a common point of last scattering $\mbf{x_1}$ come from
-    a surrounding neighborhood of prior locations $\mbf{x_2}$, where we use the
-    subscript to label the scattering number, counting back in time from
-    observation at scattering ``0''.  Arriving at $\mbf{x_1}$, the photons
-    scatter into the LOS and their combined distribution is no longer that of a
-    perfect blackbody; it is an average of blackbodies.  The resulting
-    distortion of the blackbody spectrum retains information about the
-    distribution of temperatures in the second-last-scattering neighborhood that
-    goes beyond the intensity of the photon emissions from that LOS.
-
     To calculate the observational effects of this blackbody averaging, we must
     first calculate the probability density $\mcal{P}(\mbf{x_2},\mbf{x_1})$ that
     a photon arriving at the observer from a last-scattering location
@@ -209,13 +260,14 @@ $^{4}$Department of Physics and Astronomy, University of Pittsburgh, Pittsburgh,
     last scattering (at $z\simeq10^3$) but well before the onset of cosmic
     acceleration.  The comoving displacement of the j-th-last scatter from the
     i-th-last-scattering location is $\mbf{x_{ij}}\equiv\mbf{x_j}-\mbf{x_i}$.
-    We also write $r_{ij}$ for $\norm{\mbf{x_{ij}}}$.
+    We also write $r_{ij}$ for $\norm{\mbf{x_{ij}}}$. The details of the
+    coordinates are shown in \autoref{fig:coordinate_system}.
 
     To leading order (in fluctuations around the homogeneous background metric
     and stress-energy tensor), the probability distribution $\mcal{P}(\mbf{x_2},
     \mbf{x_1})$ is rotationally symmetric about the line-of-sight axis.
     $\mcal{P}(\mbf{x_2},\mbf{x_1})$ can thus be written in terms of:
-    
+
     \begin{enumerate}[leftmargin=*]
         \item
             $P_1(r_{01})\,\dif{r_{01}}$, the probability that last scattering
@@ -224,7 +276,7 @@ $^{4}$Department of Physics and Astronomy, University of Pittsburgh, Pittsburgh,
             \begin{equation}  \label{eq:P1r1}
                 P_1(r_{01}) = \GgamBar(r_0 + r_{01},r_0)\,,
             \end{equation}
-            where $\GgamBar(r_a,r_b)$ is the visibility function for Compton
+            where $\GgamBar(r_a,r_b)$ is the visibility function for Thomson
             scattering between comoving radii $r_a$ and $r_b\geq r_a$ (see
             \appref{app:visibility_function});
         \item
@@ -305,14 +357,7 @@ $^{4}$Department of Physics and Astronomy, University of Pittsburgh, Pittsburgh,
                  {\left((\Leq \spll-r_{01})^2 + \Leq^2\sprp^2\right)^{3/2}}
     \end{equation}
 
-    The probability density $\mcal{P}(\spll,\sprp,\phi)$ is then\footnote{%
-        Note that the variables are $\sprp$ and $\spll$, not $\sprp^2$ and
-        $\spll$, thus
-        \begin{equation} \label{eq:Pnormalization}
-            1 = \int_0^{\infty}\!\!\!\dif{\sprp} \dif{\spll} \int_0^{2\pi}\!\!\!\dif{\phi} \; \mcal{P}(\spll,\sprp,\phi)
-              = \int\!\!\dif[3]{s}\; \mcal{P}(\spll,\sprp,\phi) \,. \nonumber
-        \end{equation}
-    }
+    The probability density $\mcal{P}(\spll,\sprp,\phi)$ is then
 
     \begin{widetext}
     \begin{align} \label{eq:Pspllsprpphi}
@@ -326,9 +371,15 @@ $^{4}$Department of Physics and Astronomy, University of Pittsburgh, Pittsburgh,
                 \GgamBar\left( r_0+r_{01}+\sqrt{(\Leq \spll-r_0+r_{01})^2+\Leq^2\sprp^2}, r_0+r_{01} \right)
                 \left( \frac{3\Leq \sprp}{8} \right)
                 \frac{2(\Leq \spll-r_{01})^2 + \Leq^2\sprp^2}
-                    {\left((\Leq \spll-r_{01})^2+\Leq^2\sprp^2\right)^2} \,.
+                    {\left((\Leq \spll-r_{01})^2+\Leq^2\sprp^2\right)^2} \,, \nonumber
     \end{align}
     \end{widetext}
+    where the variables are $\sprp$ and $\spll$, not $\sprp^2$ and
+    $\spll$, thus
+    \begin{equation} \label{eq:Pnormalization}
+        1 = \int_0^{\infty}\!\!\!\dif{\sprp} \dif{\spll} \int_0^{2\pi}\!\!\!\dif{\phi} \; \mcal{P}(\spll,\sprp,\phi)
+          = \int\!\!\dif[3]{s}\; \mcal{P}(\spll,\sprp,\phi) \,. \nonumber
+    \end{equation}
 
     The numerical evaluation of $\mcal{P}(\spll,\sprp,\phi)$ is described in
     \appref{app:Pspllsprp}, and the result is presented in \autoref{fig:P2LS}.
@@ -357,8 +408,8 @@ $^{4}$Department of Physics and Astronomy, University of Pittsburgh, Pittsburgh,
     $\bar{T}\equiv\sum_i a_i T_i$ as one would expect, then $\sum_i
     a_i\epsilon_i=0$.
 
-    It is conventional and convenient to reorganize \autoref{eqn:sumofbb},
-    writing:
+    It is conventional \citep{Chluba+2012} and convenient to reorganize
+    \autoref{eqn:sumofbb}, writing:
     \begin{align} \label{eqn:sumofbb_reorg}
         \sum_i a_i n_{Pl}(\chi,\!T_i)
             &=   n_{Pl}(\chi,\hat{T})
@@ -437,6 +488,9 @@ $^{4}$Department of Physics and Astronomy, University of Pittsburgh, Pittsburgh,
     \begin{equation}
         A^{\!\mcal{T}\!\!}(\mbf{k})\equiv \mcal{T}(\norm{\mbf{k}}) A(\mbf{k}) \,.
     \end{equation}
+    For simplicity, we will include only the dominant Sachs-Wolfe term in the
+    transfer function, so we can take $\mcal{T}$ and thus $A^{\!\mcal{T}\!\!}$
+    to be independent of $\hat{n}$.
 
     The appropriate weighted mean temperature of the photons scattered into the
     LOS in direction $\nhat$ is
@@ -727,7 +781,46 @@ $^{4}$Department of Physics and Astronomy, University of Pittsburgh, Pittsburgh,
     \end{align}
     $C^{(\DeltaT)^2(\DeltaT)^2}$ is also a function only of
     $\cos\theta=\nhat_1\cdot\nhat_2$.  
-    We also plot (in red) $C^{\Yd\Yd}$.
+    We also plot (in red) $C^{\Yd\Yd}$.  The small-scales wiggles in the power
+    spectra are numerical artifacts of the discrete Legendre transform, and are
+    immaterial to our conclusions.  The correlation functions in
+    \autoref{fig:y-tsqcorrelation} are smooth, as expected. 
+
+    \begin{figure}
+        \centering
+        \includegraphics[width=1\linewidth]{figures/correlation.pdf}
+        \caption{%
+            \textbf{Upper panel}: Reduced dimensionless angular correlation
+            functions of $Y$, $C^{\mcal{YY}}(\theta)/A_s^2$ (red), between $Y$
+            and $(\DeltaT)^2$, $C^{\Yd(\DeltaT)^2}(\theta)/A_s^2$ (purple), and
+            between the Sachs-Wolfe contributions to $(\DeltaT)^2$,
+            $C^{(\DeltaT)^2(\DeltaT)^2}(\theta)/A_s^2$ (blue), where $\theta$ is
+            the angle between sky locations of the two quantities being
+            correlated.  \textbf{Lower panel}: the ratio of $C^{\Yd(\DeltaT)^2}$
+            to $C^{(\DeltaT)^2(\DeltaT)^2}$ (blue) and $C^{\Yd(\DeltaT)^2}$ to
+            $C^{\Yd\Yd}$ (red).
+            %
+        }
+        \label{fig:y-tsqcorrelation}
+        \script{correlation/plot_correlation.py}
+    \end{figure}
+    % 
+    \begin{figure}
+        \includegraphics[width=1\linewidth]{figures/cls.pdf}
+        \caption{% 
+            \textbf{Upper panel}: Legendre expansion coefficients (cf.
+            \eqref{eq:LegendreCoefficents}) of the correlation functions
+            $C^{\mcal{YY}}(\theta)/A_s^2$ (red) and
+            $C^{\Yd-(\DeltaT)^2}(\theta)/A_s^2$ (purple), compared to those of
+            $C^{(\DeltaT)^2-(\DeltaT)^2}(\theta)/A_s^2$ (blue), accounting
+            solely for Sachs-Wolfe fluctuations. The small-scale wiggles are
+            numerical artifacts of the discrete Legendre transformation and are
+            not material to our conclusions. \textbf{Lower panel}: the ratio of
+            the expansion coefficients to those of $(\DeltaT)^2(\DeltaT)^2$.%
+        }
+        \label{fig:y-tsqangularPS}
+        \script{cls/plot_cls.py}
+    \end{figure}
     
     In the lower panel of the figure, we plot (in blue) the ratio of
     $C^{\Yd(\DeltaT)^2}$ to $C^{(\DeltaT)^2(\Delta T)^2}$, as well as the ratio
@@ -743,51 +836,6 @@ $^{4}$Department of Physics and Astronomy, University of Pittsburgh, Pittsburgh,
     Over substantial ranges of angle, $C^{\Yd(\DeltaT)^2}>
     10^{-3}C^{(\DeltaT)^2(\DeltaT)^2}$.  Similarly, over a sizable range of
     $\ell$, $C_\ell^{\Yd(\DeltaT)^2} > 10^{-3}C_\ell^{(\Delta T)^2(\DeltaT)^2}$.
-
-    \begin{figure*}
-    \begin{minipage}[c]{0.45\linewidth}
-        \centering
-        \vspace{15pt}
-        \includegraphics[width=1\linewidth]{figures/correlation.pdf}
-        \vspace{-15pt}
-        \caption{%
-            \textbf{Upper panel}: Reduced dimensionless angular correlation
-            functions of $Y$, $C^{\mcal{YY}}(\theta)/A_s^2$ (red), between $Y$
-            and $(\DeltaT)^2$, $C^{\Yd(\DeltaT)^2}(\theta)/A_s^2$ (purple), and
-            between the Sachs-Wolfe contributions to $(\DeltaT)^2$,
-            $C^{(\DeltaT)^2(\DeltaT)^2}(\theta)/A_s^2$ (blue), where $\theta$ is
-            the angle between sky locations of the two quantities being
-            correlated.  \textbf{Lower panel}: the ratio of $C^{\Yd(\DeltaT)^2}$
-            to $C^{(\DeltaT)^2(\DeltaT)^2}$ (blue) and $C^{\Yd(\DeltaT)^2}$ to
-            $C^{\Yd\Yd}$ (red).
-            %
-        }
-        \label{fig:y-tsqcorrelation}
-        \script{correlation/plot_correlation.py}
-
-    \end{minipage}
-    \hfill
-    \begin{minipage}[c]{0.45\linewidth}
-        \includegraphics[width=1\linewidth]{figures/cls.pdf}
-        \vspace{-15pt}
-        \caption{% 
-            \textbf{Upper panel}: Legendre expansion coefficients (cf.
-            \eqref{eq:LegendreCoefficents}) of the correlation functions
-            $C^{\mcal{YY}}(\theta)/A_s^2$ (red) and
-            $C^{\Yd-(\DeltaT)^2}(\theta)/A_s^2$ (purple), compared to those of
-            $C^{(\DeltaT)^2-(\DeltaT)^2}(\theta)/A_s^2$ (blue), accounting
-            solely for Sachs-Wolfe fluctuations.  \textbf{Lower panel}: the
-            ratio of the expansion coefficients to those of
-            $(\DeltaT)^2(\DeltaT)^2$.%
-        }
-        \label{fig:y-tsqangularPS}
-        \script{cls/plot_cls.py}
-        \centering
-
-    \end{minipage}
-    \end{figure*}
-
-% section correlation_function (end)
 
 
 \section{Detectability} \label{sec:detectability}
@@ -822,7 +870,7 @@ $^{4}$Department of Physics and Astronomy, University of Pittsburgh, Pittsburgh,
     variance, including both pixel noise and cosmic variance, is given by
     \citealt[Eq.~(3.26)]{Kamionkowski+1997}, as
     %
-    \vskip 20pt
+    % \vskip 20pt
     \begin{widetext}
         \begin{equation}
             \Xi_{\Yd(\DeltaT)^2,\Yd(\DeltaT)^2}
@@ -858,7 +906,7 @@ $^{4}$Department of Physics and Astronomy, University of Pittsburgh, Pittsburgh,
         \end{equation}
         \label{eq:cl_sn}
     \end{widetext}
-    \clearpage\noindent where a factor of $f_{\rm sky}$, giving the sky fraction
+    where a factor of $f_{\rm sky}$, giving the sky fraction
     covered by a map, has been included.  To the extent the fields $\Yd$ and
     $(\DeltaT)^2$ are Gaussian, each mode is statistically independent, and the
     total signal-to-noise can be obtained by summing over all $\ell$ values
@@ -972,12 +1020,13 @@ $^{4}$Department of Physics and Astronomy, University of Pittsburgh, Pittsburgh,
     $y$-distortion due to recombination-era diffusion from other causes of
     spectral distortion in the presence of foregrounds with spectra that are
     imperfectly known and that are also anisotropic \citep{Abitbol+2017,
-    Hart+2020}.  These foregrounds include our Milky Way, and both galaxies and
-    galaxy clusters at all redshifts.  The $\Yd$ auto-correlation function, like
-    the $y$-type distortion, will not be detectable by current or upcoming
-    experiments.  The amplitude of the correlation signal is far smaller than
-    for other sources of $y$ auto-correlation at low redshifts, and so will be
-    difficult to separate from foregrounds.
+    Hart+2020, RottiChluba2021}.  These foregrounds include our Milky Way, and
+    both galaxies and galaxy clusters at all redshifts.  The $\Yd$
+    auto-correlation function, like the $y$-type distortion, will not be
+    detectable by current or upcoming experiments.  The amplitude of the
+    correlation signal is far smaller than for other sources of $y$
+    auto-correlation at low redshifts, and so will be difficult to separate from
+    foregrounds.
     
     More promising than the $\Yd$ signal itself or its auto-correlation function
     is the cross-correlation $C_\ell^{\Yd (\DeltaT)^2}$ between the
@@ -1084,6 +1133,7 @@ $^{4}$Department of Physics and Astronomy, University of Pittsburgh, Pittsburgh,
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % REFERENCES
 
+\clearpage
 \bibliographystyle{mnras}
 \bibliography{starkman_etal_2023_diffusion_distortion}
 
